# manager

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
src/: api.rs  backup.rs  download.rs  execute.rs  init.rs  launch.rs  main.rs  rcon.rs  service.rs  telegram.rs
src/assets/: constants.rs  mod.rs  server.properties
src/backup/: mod.rs  rcon.rs
