[package]
name = "uwucrafter"
version = "0.3.0"
edition = "2021"

[dependencies]
serde = "1.0"
rand = "0.8.5"
serde_yaml = "0.9"
indicatif = "0.17.0"
rcon-client = "0.1.2"
futures-util = "0.3.23"
clap = { version = "3.2.17", features = ["derive"] }
tokio = { version = "1.20.1", features = ["full"] }
reqwest = { version = "0.11.11", features = ["json", "stream"] }
